<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.smart_campus.smartcampus.student.student_main"
    tools:showIn="@layout/activity_student_main">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:layout_weight="0.25">
                <TextView android:id="@+id/home_btn_feature1"
                    style="@style/HomeButton"
                    android:onClick="Attendance"
                    android:text="@string/title_feature1"
                    android:drawableTop="@drawable/attendance"
                    android:layout_height="wrap_content" />
                <TextView android:id="@+id/home_btn_feature2"
                    style="@style/HomeButton"
                    android:onClick="Manual"
                    android:text="@string/title_feature2"
                    android:drawableTop="@drawable/manual"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:layout_weight="0.10">
                <TextView android:id="@+id/home_btn_feature3"
                    style="@style/HomeButton"
                    android:onClick="Schedule"
                    android:text="@string/title_feature3"
                    android:drawableTop="@drawable/schedule"
                    android:layout_height="wrap_content" />
                <TextView android:id="@+id/home_btn_feature4"
                    style="@style/HomeButton"
                    android:onClick="Notice"
                    android:text="@string/title_feature4"
                    android:drawableTop="@drawable/notice"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:layout_weight="0.25">
                <TextView android:id="@+id/home_btn_feature5"
                    style="@style/HomeButton"
                    android:onClick="Teacher"
                    android:text="@string/title_feature5"
                    android:drawableTop="@drawable/teacher"
                    android:layout_height="wrap_content" />
                <TextView android:id="@+id/home_btn_feature6"
                    style="@style/HomeButton"
                    android:onClick="H_O_D"
                    android:text="@string/title_feature6"
                    android:drawableTop="@drawable/hod"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
